// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-exit 1`] = `[]`;

exports[`default renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stderr 1`] = `[]`;

exports[`default renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stdout 1`] = `
[
  "[?25l",
  "[?2026h[2m◼[22m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will execute.
[?2026l",
  "[?2026h[1B[G[G[34m?[39m [1mGive me some input.[22m
[K[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[1A[2K[G[2m◼[22m This task will execute.

[34m?[39m [1mGive me some input.[22m
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[1A[2K[G[31m✖[39m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[31m✖[39m Prompt was aborted
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "[31m✖[39m Prompt was aborted
",
  "[?25h",
]
`;

exports[`default renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-exit 1`] = `[]`;

exports[`default renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stderr 1`] = `[]`;

exports[`default renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stdout 1`] = `
[
  "[?25l",
  "[?2026h[2m◼[22m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will execute.
[?2026l",
  "[?2026h[1B[G[G[34m?[39m [1mGive me some input.[22m
[K[?2026l",
  "[?2026h[1A[G[2K[G[34m?[39m [1mGive me some input.[22m t[K
[?2026l",
  "[?2026h[1A[G[2K[G[34m?[39m [1mGive me some input.[22m te[K
[?2026l",
  "[?2026h[1A[G[2K[G[34m?[39m [1mGive me some input.[22m tes[K
[?2026l",
  "[?2026h[1A[G[2K[G[34m?[39m [1mGive me some input.[22m test[K
[?2026l",
  "[?2026h[1A[G[2K[G[32m✔[39m [1mGive me some input.[22m [36mtest[39m[K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[1A[2K[G[2m◼[22m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[33m❯[39m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[32m✔[39m This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "[32m✔[39m This task will execute.
",
  "[?25h",
]
`;

exports[`simple renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-exit 1`] = `[]`;

exports[`simple renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stderr 1`] = `
[
  "[34m?[39m [1mGive me some input.[22m[23G",
  "
[G[?25h",
  "[31m✖[39m This task will execute. [31m[FAILED: Prompt was aborted][39m
",
]
`;

exports[`simple renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[?25l",
]
`;

exports[`simple renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-exit 1`] = `[]`;

exports[`simple renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stderr 1`] = `
[
  "[34m?[39m [1mGive me some input.[22m[23G",
  "[24G",
  "[2K[G[34m?[39m [1mGive me some input.[22m t[24G",
  "[25G",
  "[2K[G[34m?[39m [1mGive me some input.[22m te[25G",
  "[26G",
  "[2K[G[34m?[39m [1mGive me some input.[22m tes[26G",
  "[27G",
  "[2K[G[34m?[39m [1mGive me some input.[22m test[27G",
  "[23G",
  "[2K[G[34m?[39m [1mGive me some input.[22m test[27G",
  "[2K[G[32m✔[39m [1mGive me some input.[22m [36mtest[39m[27G",
  "
[G[?25h",
]
`;

exports[`simple renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stdout 1`] = `
[
  "[33m❯[39m This task will execute.
",
  "[?25l",
  "[?25h",
  "[32m✔[39m This task will execute.
",
]
`;

exports[`test renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-exit 1`] = `[]`;

exports[`test renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"Prompt was aborted"},"task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"PROMPT","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m\\u001b[23G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"PROMPT_FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\n\\u001b[G\\u001b[?25h","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"PROMPT_FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"FAILED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":true,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`test renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-exit 1`] = `[]`;

exports[`test renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stderr 1`] = `[]`;

exports[`test renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":true,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"PROMPT","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m\\u001b[23G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[24G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m t\\u001b[24G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[25G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m te\\u001b[25G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[26G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m tes\\u001b[26G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[27G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m test\\u001b[27G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[23G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[34m?\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m test\\u001b[27G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\u001b[2K\\u001b[G\\u001b[32m✔\\u001b[39m \\u001b[1mGive me some input.\\u001b[22m \\u001b[36mtest\\u001b[39m\\u001b[27G","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"PROMPT","data":"\\n\\u001b[G\\u001b[?25h","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":true,"isPaused":false,"isPending":true,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"PROMPT_COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":false,"isSkipped":false,"hasFinalized":false,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"hasRolledBack":false,"isRollingBack":false,"isCompleted":true,"isSkipped":false,"hasFinalized":true,"hasSubtasks":false,"title":"This task will execute.","hasReset":false,"hasTitle":true,"isPrompt":false,"isPaused":false,"isPending":false,"isCancelled":false,"isStarted":false,"hasFailed":false,"isEnabled":true,"isRetrying":false,"path":["This task will execute."]}}
",
]
`;

exports[`verbose renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-exit 1`] = `[]`;

exports[`verbose renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stderr 1`] = `
[
  "[31m[FAILED][39m Prompt was aborted
",
]
`;

exports[`verbose renderer: prompt -> inquirer should be able to cancel a prompt: AABZsFFYgZITgdWMQdLGmxABwlBaXdiv-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m
",
]
`;

exports[`verbose renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-exit 1`] = `[]`;

exports[`verbose renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stderr 1`] = `[]`;

exports[`verbose renderer: prompt -> inquirer should render a prompt: zTXlHkwllFGUiGXlWztXAeZMvIleiEFF-stdout 1`] = `
[
  "[33m[STARTED][39m This task will execute.
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m t
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m te
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m tes
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m test
",
  "[PROMPT] [34m?[39m [1mGive me some input.[22m test
",
  "[PROMPT] [32m✔[39m [1mGive me some input.[22m [36mtest[39m
",
  "[32m[COMPLETED][39m This task will execute.
",
]
`;
